@@ -1,3 +1,8 @@
+2010-05-11  Martin Maechler  <maechler@stat.math.ethz.ch>
+
+	* R/lmer2.R (bootMer, simulate): new (lmer2-only) functions;
+	* man/bootMer.Rd: doc;  more to come.
+
 2010-04-13  Martin Maechler  <maechler@stat.math.ethz.ch>
 
 	* R/profile.R (ans): replace use of vcov() by unscaledVar() in
